--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.16",
+    "karma-chrome-headless": "~3.1.0",
+    "karma-coverage": "~2.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
